overlap: fix footer overlap

--- a/src/client/static/main.css
+++ b/src/client/static/main.css
@@ -95,13 +95,18 @@ h1, h2, h3, h4, h5, h6 {
   color: #cbd5db
 }
 
+#wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
 /*
     FOOTER
 */
 
 .footer {
-  position: absolute;
-  bottom: -425%;
+  position: relative;
+  bottom: 0;
   margin-top: 50px;
   width: 100%;
   height: 200px;
